add mako config

--- a/mako/.config/mako/config
+++ b/mako/.config/mako/config
@@ -4,6 +4,8 @@ background-color=#1e1e2e
 text-color=#cdd6f4
 border-color=#cba6f7
 progress-color=over #313244
+anchor=top-top-center
 
 [urgency=high]
 border-color=#fab387
+
