update mako config

--- a/mako/.config/mako/config
+++ b/mako/.config/mako/config
@@ -1,10 +1,13 @@
 # Colors
-
+sort=-time
 background-color=#1e1e2e
 text-color=#cdd6f4
 border-color=#cba6f7
 progress-color=over #313244
-anchor=top-top-center
+anchor=top-center
+layer=overlay
+width=300
+height=150
 
 [urgency=high]
 border-color=#fab387
