update mako config with sane position

--- a/mako/.config/mako/config
+++ b/mako/.config/mako/config
@@ -4,7 +4,7 @@ background-color=#1e1e2e
 text-color=#cdd6f4
 border-color=#cba6f7
 progress-color=over #313244
-anchor=top-center
+anchor=top-right
 layer=overlay
 width=300
 height=150
