add calendar application to waybar

--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -49,7 +49,7 @@
         "format-alt": "  {:%d/%m/%Y   %H:%M:%S}",
         //"max-length": 200
         "interval": 1
-        // "on-click": "~/.config/waybar/scripts/OCV",
+        "on-click": "merkuro-calendar",
     },
     "custom/power": {
       	"format":" ",
