--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -46,10 +46,9 @@
         "tooltip-format": "<big>{:%A, %d.%B %Y }</big>\n<tt><small>{calendar}</small></tt>",
         //"format": "  {:%a %d %b   %I:%M %p}",	//12 hour format
         "format": "{:%a %d %b  %H:%M}",	//24 hour format
-        "format-alt": "  {:%d/%m/%Y   %H:%M:%S}",
         //"max-length": 200
-        "interval": 1
-        "on-click": "merkuro-calendar",
+        "interval": 1,
+        "on-click": "merkuro-calendar &"
     },
     "custom/power": {
       	"format":" ",
