Updated to new hyprland syntax

--- a/hypr/.config/hypr/config/execs.conf
+++ b/hypr/.config/hypr/config/execs.conf
@@ -1,4 +1,4 @@
-
+# Nextcloud
 exec-once = nextcloud
 # Wallpaper
 exec-once = hyprpaper
@@ -8,8 +8,7 @@ exec-once = swaync
 
 # Status bar
 exec-once = waybar
-layerrule = blur , waybar
-layerrule = ignorezero , waybar
+layerrule = blur on, match:namespace waybar
 
 # Clipboard Manager
 # exec-once = wl-paste --type text --watch cliphist store #Stores only text data
