--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,5 +1,9 @@
-preload = ~/.config/backgrounds/black5_unicat.png
-preload = ~/.config/backgrounds/dark-cat-rosewater.png
-
-wallpaper = DP-1,~/.config/backgrounds/black5_unicat.png
-wallpaper = HDMI-A-1,~/.config/backgrounds/dark-cat-rosewater.png
+wallpaper { 
+	monitor = DP-1
+	path = ~/.config/backgrounds/black5_unicat.png 
+}
+wallpaper {
+	monitor = HDMI-A-1 
+	path = ~/.config/backgrounds/dark-cat-rosewater.png
+}
+splash = false
