Updated to new hyprland windowrules syntax

--- a/hypr/.config/hypr/config/windowrules.conf
+++ b/hypr/.config/hypr/config/windowrules.conf
@@ -4,64 +4,150 @@
 
 # Windows Rules https://wiki.hyprland.org/Configuring/Window-Rules/ #
 
-# Float Necessary Windows
-windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = float, title:^(Picture in picture)$
-windowrulev2 = float, title:^(Save File)$
-windowrulev2 = float, title:^(Open File)$
-windowrulev2 = float, class:^(LibreWolf)$, title:^(Picture-in-Picture)$
-windowrulev2 = float, class:^(blueman-manager)$
-windowrulev2 = float, class:^(xdg-desktop-portal-(gtk|kde|hyprland)).*
-windowrulev2 = float, class:^(polkit-gnome-authentication-agent-1|hyprpolkitagent|org.org.kde.polkit-kde-authentication-agent-1).*
-windowrulev2 = float, class:^(CachyOSHello)$
-windowrulev2 = float, class:^(zenity)$
-windowrulev2 = float, title:^(Steam - Self Updater)$
-# Increase the opacity
-windowrulev2 = opacity 0.92, class:^(thunar|nemo)$
-windowrulev2 = opacity 0.96, class:^(discord|armcord|webcord)$
-windowrulev2 = opacity 0.95, title:^(QQ|Telegram)$
-windowrulev2 = opacity 0.95, title:^(NetEase Cloud Music Gtk4)$
-# General window rules
-windowrulev2 = float, size 960 540, move 25%-, title:^(Picture-in-Picture)$
-#windowrule = float, title:^(Picture-in-Picture)$
-#windowrule = size 960 540, title:^(Picture-in-Picture)$
-#windowrule = move 25%-, title:^(Picture-in-Picturei)$
-windowrulev2 = float, size 960 540, move 25%-, title:^(imv|mpv|danmufloat|termfloat|nemo|ncmpcpp)$
-windowrulev2 = pin, title:^(danmufloat)$
-windowrulev2 = rounding 5, title:^(danmufloat|termfloat)$
-#windowrule = float, title:^(imv|mpv|danmufloat|termfloat|nemo|ncmpcpp)$
-#windowrule = move 25%-, title:^(imv|mpv|danmufloat|termfloat|nemo|ncmpcpp)$
-#windowrule = size 960 540, title:^(imv|mpv|danmufloat|termfloat|nemo|ncmpcpp)$
-#windowrule = pin, title:^(danmufloat)$
-#windowrule = rounding 5, title:^(danmufloat|termfloat)$i
-windowrulev2 = animation slide right, class:^(kitty|Alacritty)$
-windowrulev2 = noblur, class:^(org.mozilla.firefox)$
-#windowrule = animation slide right, class:^(kitty|Alacritty)$
-#windowrule = noblur, class:^(org.mozilla.firefox)$
-# Decorations related to floating windows on workspaces 1 to 10
-windowrulev2 = bordersize 2, floating:1, workspace:w[fv1-10]
-windowrulev2 = bordercolor $cachylblue, floating:1, workspace:w[fv1-10]
-windowrulev2 = rounding 8, floating:1, workspace:w[fv1-10]
-# Decorations related to tiling windows on workspaces 1 to 10
-windowrulev2 = bordersize 3, floating:0, workspace:f[1-10]
-windowrulev2 = rounding 4, floating:0, workspace:f[1-10]
-# Windows Rules End #
-# Workspaces Rules https://wiki.hyprland.org/Configuring/Workspace-Rules/ #
-workspace = 1, default:true, monitor:$priMon
-workspace = 6, default:true, monitor:$secMon
-# Workspace selectors https://wiki.hyprland.org/Configuring/Workspace-Rules/#workspace-selectors
-# workspace = r[1-5], monitor:$priMon
-# workspace = r[6-10], monitor:$secMon
-# workspace = special:scratchpad, on-created-empty:$applauncher
-# no_gaps_when_only deprecated instead workspaces rules with selectors can do the same
-# Smart gaps from 0.45.0 https://wiki.hyprland.org/Configuring/Workspace-Rules/#smart-gaps
-workspace = w[tv1-10], gapsout:5, gapsin:3
-workspace = f[1], gapsout:5, gapsin:3
-# Workspaces Rules End #
+# Float necessary windows
+windowrule {
+    name = float-pavucontrol
+    match:class = ^org.pulseaudio.pavucontrol$
+    float = on
+}
 
-# Layers Rules #
-layerrule = animation slide top, match:namespace = logiout_dialog
-layerrule = animation popin 50%, match:namespace = waybar
-layerrule = animation slide down, match:namespace =waybar
-layerrule = animation fade 50%, match:namespace = wallpaper
-# Layers Rules End #
+windowrule {
+    name = float-picture-in-picture-title
+    match:title = ^Picture in picture$
+    float = on
+}
+
+windowrule {
+    name = float-save-open
+    match:title = ^(Save File|Open File)$
+    float = on
+}
+
+windowrule {
+    name = float-librewolf-pip
+    match:class = ^LibreWolf$
+    match:title = ^Picture-in-Picture$
+    float = on
+}
+
+windowrule {
+    name = float-blueman-manager
+    match:class = ^blueman-manager$
+    float = on
+}
+
+windowrule {
+    name = float-xdg-desktop-portals
+    match:class = ^xdg-desktop-portal-(gtk|kde|hyprland).*
+    float = on
+}
+
+windowrule {
+    name = float-polkit-agents
+    match:class = ^(polkit-gnome-authentication-agent-1|hyprpolkitagent|org.kde.polkit-kde-authentication-agent-1).*
+    float = on
+}
+
+windowrule {
+    name = float-cachyoshello
+    match:class = ^CachyOSHello$
+    float = on
+}
+
+windowrule {
+    name = float-zenity
+    match:class = ^zenity$
+    float = on
+}
+
+windowrule {
+    name = float-steam-self-updater
+    match:title = ^Steam - Self Updater$
+    float = on
+}
+
+# Opacity rules
+windowrule {
+    name = opacity-files-terminals
+    match:class = ^(thunar|nemo)$
+    opacity = 0.92
+}
+
+windowrule {
+    name = opacity-discord-clients
+    match:class = ^(discord|armcord|webcord)$
+    opacity = 0.96
+}
+
+windowrule {
+    name = opacity-messaging
+    match:title = ^(QQ|Telegram)$
+    opacity = 0.95
+}
+
+windowrule {
+    name = opacity-netmusic
+    match:title = ^NetEase Cloud Music Gtk4$
+    opacity = 0.95
+}
+
+# Floats with sizing and move
+windowrule {
+    name = pip-size-and-move
+    match:title = ^Picture-in-Picture$
+    float = on
+    size = 960 540
+    move = (monitor_w*0.5 - window_w*0.5) (monitor_h*0.5 - window_h*0.5)
+}
+
+windowrule {
+    name = media-floats
+    match:title = ^(imv|mpv|danmufloat|termfloat|nemo|ncmpcpp)$
+    float = on
+    size = 960 540
+    move = (monitor_w*0.5 - window_w*0.5) (monitor_h*0.5 - window_h*0.5)
+}
+
+windowrule {
+    name = pin-danmufloat
+    match:title = ^danmufloat$
+    pin = on
+}
+
+windowrule {
+    name = rounding-for-floats
+    match:title = ^(danmufloat|termfloat)$
+    rounding = 5
+}
+
+# Animations & special effects
+windowrule {
+    name = animate-terms
+    match:class = ^(kitty|Alacritty)$
+    animation = slide right
+}
+
+windowrule {
+    name = no-blur-firefox
+    match:class = ^org.mozilla.firefox$
+    no_blur = on
+}
+
+# Decoration defaults for floating windows on certain workspaces
+windowrule {
+    name = border-float-workspaces
+    match:workspace = w[fv1-10]
+    match:float = 1
+    border_size = 2
+    border_color = $cachylblue
+    rounding = 8
+}
+
+# Decoration defaults for tiled windows
+windowrule {
+    name = border-tiled-workspaces
+    match:workspace = f[1-10]
+    match:float = 0
+    border_size = 3
+    rounding = 4
+}
